--- a/config/interface_setup.cfg
+++ b/config/interface_setup.cfg
@@ -12,10 +12,10 @@ adapter driver sysfsgpio
 
 # Each of the JTAG lines need a gpio number set: tck tms tdi tdo
 # Header pin numbers: 23 22 19 21
-sysfsgpio jtag_nums 11 25 10 9
+sysfsgpio_jtag_nums 11 25 10 9
 
 # Each of the SWD lines need a gpio number set: swclk swdio
-sysfsgpio swd_nums 11 10
+sysfsgpio_swd_nums 11 10
 
 # If you define trst or srst, use appropriate reset_config
 # Header pin numbers: TRST - 26, SRST - 18
